# balance-studio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  fly.toml  pyproject.toml
api/: dependencies.py  main.py  registry.py
api/routers/: __init__.py  branches.py  domains.py  entities.py  health.py  (+2 more)
core/: balance_metrics.py  branching.py  cache_backend.py  constraint_engine.py  entity_schema.py  iteration_engine.py  llm_anthropic.py  llm_client.py  llm_factory.py  llm_fakes.py  llm_generator.py  llm_hats.py  llm_local.py  objectives.py  parallel_runner.py  paths.py  presets.py  report_engine.py  scenario.py  sim_cache.py  simulator_interface.py  snapshot.py
deploy/: README.md  docker-compose.yml
docs/: architecture.md  blueprint-encounter-domain.md  experiments.md  performance.md  product-audit.md  prompts.md  roadmap-v2-rule-engine.md  security-review.md  session-report-2026-07-13.md  starter-scenarios.md  tasks.md  writing-a-domain.md  writing-a-preset.md  writing-a-view.md
scripts/: demo_sprint2.py  demo_sprint3.sh  experiment_b6.py  experiment_balance.py  seed_starter_scenarios.py  smoke_local.py
tests/: test_api_auth.py  test_api_health.py  test_api_scenarios.py  test_api_simulate.py  test_balance_metrics.py  test_branching.py  test_cache_backend.py  test_card_schema.py  test_card_simulator.py  test_constraint_engine.py  test_creature_load.py  test_creature_metrics.py  test_creature_simulator.py  test_declarative_enums.py  test_demo_sprint2.py  test_entity_schema.py  test_iteration_engine.py  test_llm_generator.py  test_llm_hats.py  test_llm_local.py  test_metrics.py  test_objectives.py  test_paths.py  test_performance.py  test_presets.py  test_scenario.py  test_sim_cache.py  test_simulator_interface.py  test_snapshot.py  test_starter_scenarios.py  test_team_metrics.py  test_team_schema.py  test_team_simulator.py
ui/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
(+147 files in other folders)
