[tool.poetry]
name = "balance-studio"
version = "0.1.0"
description = "Generic LLM-powered balance testing framework with domain plugins"
authors = ["marco <marcooinotna13@outlook.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "domains"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
diskcache = "^5.6.0"
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
zstandard = "^0.25.0"
openai = "^2.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
